fix deco wrap

--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,7 @@ textarea,
   font-size: 16px;
   caret-color: hsl(var(--p));
 }
+
+.btn-group {
+  box-decoration-break: clone;
+}
